--- a/src/App.scss
+++ b/src/App.scss
@@ -16,6 +16,85 @@ body {
     color: white;
 }
 
-video{
-	transform: rotateY(180deg);
+.video-grid {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.remote-video {
+    width: 300px;
+}
+
+.remote-video-tile {
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    --padding: 10px;
+
+    h3 {
+        border-bottom: 1px solid white;
+        padding: var(--padding);
+    }
+
+    video {
+        padding: var(--padding);
+        display: block;
+        border-radius: 15px;
+        overflow: hidden;
+    }
+}
+
+.local-video-tile {
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    --padding: 10px;
+
+    h3 {
+        border-bottom: 1px solid white;
+        padding: var(--padding);
+    }
+
+    video {
+        padding: var(--padding);
+        display: block;
+        border-radius: 15px;
+        overflow: hidden;
+    }
+}
+
+.join-buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+
+    button {
+        font-size: 1rem;
+        padding: 5px 10px;
+    }
+}
+
+.log-peers {
+    font-size: 1rem;
+    background-color: greenyellow;
+    padding: 5px 10px;
+}
+
+.multi-call {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+}
+
+.local-user {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    button {
+        font-size: 1rem;
+        padding: 5px 10px;
+    }
 }
