--- a/src/App.scss
+++ b/src/App.scss
@@ -10,20 +10,42 @@ body {
 .app {
     height: 100%;
     width: 100%;
-
     display: flex;
+    justify-content: center;
     background-color: #0a0a0a;
     color: white;
+    flex-direction: column;
+    align-items: center;
 }
 
 .video-grid {
     display: flex;
     flex-direction: row;
     gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .remote-video {
     width: 300px;
+}
+
+.video-health {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    align-items: center;
+    padding: var(--padding);
+
+    p {
+        border-radius: 20px;
+        padding: 2px 8px;
+        background-color: green;
+        font-size: 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .remote-video-tile {
@@ -33,7 +55,7 @@ body {
     --padding: 10px;
 
     h3 {
-        border-bottom: 1px solid white;
+        border-right: 1px solid white;
         padding: var(--padding);
     }
 
@@ -42,6 +64,14 @@ body {
         display: block;
         border-radius: 15px;
         overflow: hidden;
+    }
+
+    &__info {
+        display: flex;
+        flex-direction: row;
+        gap: 10px;
+        border-bottom: 1px solid white;
+        justify-content: space-between;
     }
 }
 
@@ -92,9 +122,21 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    align-items: center;
+
+    h3 {
+        text-align: center;
+    }
 
     button {
         font-size: 1rem;
         padding: 5px 10px;
     }
+}
+
+.join-buttons-cntnr {
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+    align-items: center;
 }
